.kubernetes/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inrad-api
  namespace: inrad
  labels:
    app: inrad-api
spec:
  selector:
    matchLabels:
      app: inrad-api
      tier: backend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: inrad-api
        tier: backend
    spec:
      containers:
        - image: <IMAGE>
          name: inrad-api
          ports:
            - containerPort: 8000
              name: inrad-api
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "125m"
            limits:
              memory: "128Mi"
              cpu: "500m"
