.kubernetes/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inrad-api
  namespace: inrad
  labels:
    app: inrad-api
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: inrad-api
    tier: backend
